--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Avinash|Testing data</title>
-<link rel="stylesheet" href="/css/style.css"/>
+<link rel="stylesheet" href="../css/style.css"/>
 
 </head>
 <body>
@@ -96,7 +96,7 @@ Mitesh S. Patel</p>
     <footer>
         copyright@2018   
     </footer>
-     <script src="js/scripts.js"></script>
+     <script src="../js/scripts.js"></script>
 
 </body>
 </html>
